crates/stackable-versioned-macros/tests/snapshots/stackable_versioned_macros__snapshots__pass@hint_map.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/tests/inputs/pass/hint_map.rs
---
#[automatically_derived]
pub(crate) mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub bar: HashMap<String, u8>,
    }
}
#[automatically_derived]
impl ::core::convert::From<v1alpha1::Foo> for v1alpha2::Foo {
    fn from(__sv_foo: v1alpha1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into_iter().map(|(k, v)| (k, v.into())).collect(),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<v1alpha2::Foo> for v1alpha1::Foo {
    fn from(__sv_foo: v1alpha2::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into_iter().map(|(k, v)| (k, v.into())).collect(),
        }
    }
}
#[automatically_derived]
pub(crate) mod v1alpha2 {
    use super::*;
    pub struct Foo {
        pub bar: HashMap<String, Bar>,
    }
}
