crates/stackable-versioned-macros/tests/snapshots/stackable_versioned_macros__snapshots__pass@renamed_field.rs.snap
---
source: crates/stackable-versioned-macros/src/lib.rs
expression: formatted
input_file: crates/stackable-versioned-macros/tests/inputs/pass/renamed_field.rs
---
#[automatically_derived]
mod v1alpha1 {
    use super::*;
    pub struct Foo {
        pub bat: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
impl ::core::convert::From<v1alpha1::Foo> for v1beta1::Foo {
    fn from(__sv_foo: v1alpha1::Foo) -> Self {
        Self {
            bar: __sv_foo.bat.into(),
            baz: __sv_foo.baz.into(),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<v1beta1::Foo> for v1alpha1::Foo {
    fn from(__sv_foo: v1beta1::Foo) -> Self {
        Self {
            bat: __sv_foo.bar.into(),
            baz: __sv_foo.baz.into(),
        }
    }
}
#[automatically_derived]
mod v1beta1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
#[automatically_derived]
impl ::core::convert::From<v1beta1::Foo> for v1::Foo {
    fn from(__sv_foo: v1beta1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into(),
            baz: __sv_foo.baz.into(),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<v1::Foo> for v1beta1::Foo {
    fn from(__sv_foo: v1::Foo) -> Self {
        Self {
            bar: __sv_foo.bar.into(),
            baz: __sv_foo.baz.into(),
        }
    }
}
#[automatically_derived]
mod v1 {
    use super::*;
    pub struct Foo {
        pub bar: usize,
        pub baz: bool,
    }
}
